# ai-orchestration-patterns

./: .gitignore  README.md  pyproject.toml
pattern-a-ai-as-service/: README.md  pyproject.toml  requirements.txt  sequence.md  sequence.puml
pattern-a-ai-as-service/src/: __init__.py  api.py  booking.py  demo.py  exceptions.py  models.py  parser.py  services.py  settings.py
pattern-a-ai-as-service/tests/: __init__.py  test_api.py
pattern-b-workflow-single-process/: README.md  pyproject.toml  sequence.puml
pattern-b-workflow-single-process/src/: __init__.py  api.py  demo.py  intent_parser.py  models.py  orchestrator.py  sequence.puml  settings.py  steps.py  workflow.py
pattern-b-workflow-single-process/tests/: __init__.py  conftest.py  test_api.py
pattern-c-workflow-multi-process/: README.md  pyproject.toml  sequence.puml
pattern-c-workflow-multi-process/src/: __init__.py  api.py  demo.py  exceptions.py  lambda_handler.py  models.py  settings.py  workflow.py
pattern-c-workflow-multi-process/src/services/: __init__.py  availability.py  base.py  booking.py  intent_parser.py
pattern-c-workflow-multi-process/tests/: __init__.py  conftest.py  test_api.py
pattern-d-function-calling/: README.md  pyproject.toml  sequence.puml
pattern-d-function-calling/src/: __init__.py  api.py  demo.py  function_caller.py  lambda_handler.py  models.py  settings.py
pattern-d-function-calling/tests/: __init__.py  conftest.py  test_api.py
pattern-e-single-agent/: README.md  pyproject.toml  requirements.txt  sequence.puml
pattern-e-single-agent/src/: __init__.py  agent.py  api.py  demo.py  models.py  settings.py
pattern-f-multi-agent-single-process/: README.md  pyproject.toml  requirements.txt  sequence.puml
pattern-f-multi-agent-single-process/src/: agent.py  api.py  demo.py  models.py  settings.py
pattern-g-multi-agent-multi-process/: build.sh  pyproject.toml  requirements.txt  sequence.puml
pattern-g-multi-agent-multi-process/src/: models.py  settings.py
pattern-g-multi-agent-multi-process/src/availability/: agent.py  api.py  lambda_handler.py
pattern-g-multi-agent-multi-process/src/booking/: agent.py  api.py  lambda_handler.py
pattern-g-multi-agent-multi-process/src/manager/: agent.py  api.py  lambda_handler.py
pattern-h-bedrock-agent/: build.sh  openapi-schema.json  pyproject.toml  requirements.txt  sequence.puml
pattern-h-bedrock-agent/src/: models.py  settings.py
pattern-h-bedrock-agent/src/action/: handler.py  lambda_handler.py
pattern-h-bedrock-agent/src/invoker/: agent.py  api.py  lambda_handler.py
scripts/: package_lambda.py  requirements-lambda.txt
shared/: __init__.py  booking_service.py
terraform/: .gitignore
terraform/pattern_a/: README.md  main.tf  outputs.tf  terraform.tfvars.example
terraform/pattern_b/: README.md  main.tf  outputs.tf  terraform.tfvars.example
terraform/pattern_c/: README.md  main.tf  outputs.tf
terraform/pattern_d/: main.tf  outputs.tf  terraform.tfvars.example
terraform/pattern_e/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/pattern_f/: main.tf  outputs.tf  terraform.tfvars.example
terraform/pattern_g/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/pattern_h/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
