[project]
name = "pattern-a-ai-as-service"
version = "0.1.0"
description = "Pattern A: AI as Service - LLM parses text only, you control business logic"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ai-orchestration-shared",
    "mangum>=0.17.0",
    "boto3>=1.34.0",
]

[tool.uv.sources]
ai-orchestration-shared = { path = ".." }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
