[project]
name = "pattern-e-single-agent"
version = "0.1.0"
description = "Pattern E: Single Agent - Agent controls the loop autonomously"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mangum>=0.19.0",
    "ai-orchestration-shared",
]

[tool.uv.sources]
ai-orchestration-shared = { path = ".." }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]